k8s/overlays/dev-eks/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa
  namespace: travel-planner
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:419496180357:certificate/0508f785-8a00-4a45-8b47-f0d1da9337f8
    alb.ingress.kubernetes.io/subnets: subnet-03408f2d6c67491de,subnet-0a03a0d9d41606156
    alb.ingress.kubernetes.io/healthcheck-port: '9091'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/group.name: kdt-travelplanner-dev-eks
    alb.ingress.kubernetes.io/security-groups: sg-05658c7f76f7239e1
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'false'
spec:
  ingressClassName: alb
  rules:
  - host: api.kdt-travelplanner.protove.net
    http:
      paths:
      - path: /api/v1/users/me/travel-invitations
        pathType: Prefix
        backend:
          service:
            name: travel
            port:
              number: 8080
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: identity
            port:
              number: 8080
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: identity
            port:
              number: 8080
      - path: /api/v1/community
        pathType: Prefix
        backend:
          service:
            name: community
            port:
              number: 8080
      - path: /api/v1/travels
        pathType: Prefix
        backend:
          service:
            name: travel
            port:
              number: 8080
      - path: /api/v1/travel-invitations
        pathType: Prefix
        backend:
          service:
            name: travel
            port:
              number: 8080
      - path: /api/v1/places
        pathType: Prefix
        backend:
          service:
            name: maps
            port:
              number: 8080
      - path: /api/v1/countries
        pathType: Prefix
        backend:
          service:
            name: maps
            port:
              number: 8080
